samples/_failures_safe/1761460929_b5b076_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8f14b959.c: In function ‘free_graph’:
./samples/SAFE/__tmp_8f14b959.c:151:15: error: expected ‘)’ at end of input
  151 |         free(g
      |             ~ ^
      |               )
./samples/SAFE/__tmp_8f14b959.c:151:9: error: expected declaration or statement at end of input
  151 |         free(g
      |         ^~~~
./samples/SAFE/__tmp_8f14b959.c:151:9: error: expected declaration or statement at end of input
